[package]
name = "babel_roguelike"
version = "0.1.0"
authors = ["PKJamoo <lkavanagh010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = "0.15"
specs = { version = "0.16.1", features = ["specs-derive"] }